--- a/Allvue/appsettings.json
+++ b/Allvue/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AllvueContext": "Server=(localdb)\\mssqllocaldb;Database=AllvueContext-c6364052-573e-4f83-baef-dd49bd8aa952;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
